--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,14 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+# Forge Settings
+forge_version=36.0.26
+minecraft_version=1.16.5
+
+# Mod Settings
+mod_version=0.0.1
+
+# MCP Settings
+mappings_channel=snapshot
+mappings_version=20201028-1.16.3
