--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,9 @@ forge_version=36.0.42
 minecraft_version=1.16.5
 
 # Mod Settings
+mod_id=terafor
+mod_name=Terafor
+mod_vendor=Stryder
 mod_version=0.0.1
 
 # MCP Settings
